src/components/style/base.less
@import 'vars';
@import 'webfont';

* {
    box-sizing: border-box;
}

body {
    font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
    background: @grey;
    margin: 0;
    color: @red;
    --bg-color: @grey;
}

h1, h2, h3 {
    font-size: 2rem;
    font-weight: normal;
}

a {
    color: currentColor;
}

p {
    line-height: 1.5;

    a {
        text-decoration: none;
        box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;

        &:hover {
            box-shadow: none;
        }
    }
}

